<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.flyzebra.ffplay.GlVideoView
        android:id="@+id/gl_ffplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:id="@+id/ac_ll01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/gl_ffplay"
        android:layout_alignParentBottom="true"
        android:background="#FFF"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/dms_hint_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/default_sens_choise_margin"
            android:layout_marginTop="@dimen/default_sens_choise_margin"
            android:layout_marginRight="@dimen/default_sens_choise_margin"
            android:lineSpacingExtra="2dp"
            android:text="@string/bsd_cali_hint2"
            android:textSize="18sp" />

        <Button
            android:id="@+id/calibration_start_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/bar_choise_item_margin_bottom"
            android:text="@string/start_calibration" />

        <Button
            android:id="@+id/calibration_start_dms_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/bar_choise_item_margin_bottom"
            android:text="@string/start_dms_calibration"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:background="@color/holo_gray_light" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/gl_ffplay"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/horizontal_line"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text=" ----- "
                    android:textColor="@color/RED"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text=")"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/feature_data_et_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="200" />

            <ImageButton
                android:id="@+id/feature_down_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_up" />

            <ImageButton
                android:id="@+id/feature_up_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_down" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/car_central_line"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="  |  "
                    android:textColor="@color/YELLOW"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text=")"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/feature_data_et_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="200" />

            <ImageButton
                android:id="@+id/feature_left_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_left" />

            <ImageButton
                android:id="@+id/feature_ritgh_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/car_width"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="200" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_left" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/camera_height"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="200" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_left" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/camera_to_carhead"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="200" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_left" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/camera_to_wheel"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="200" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_left" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/camera_to_axle"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="200" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_left" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:src="@drawable/ic_keyboard_arrow_right" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>